# tp2-concurrentes-1c2024

./: .gitignore  README.md
.github/workflows/: block-main.yml  rust.yml
clients_interfaces/: Cargo.toml  orders.jsonl  orders_screen_0.jsonl  orders_screen_1.jsonl  orders_screen_2.jsonl  pedidos_simulados.jsonl
clients_interfaces/src/: container_type.rs  generate_orders.rs  ice_cream_flavor.rs  item.rs  lib.rs  main.rs  order.rs  order_id.rs  order_state.rs  screen.rs  screen_message.rs  screen_process.rs  screen_state.rs
gateway_payment/: Cargo.toml
gateway_payment/src/: container_type.rs  ice_cream_flavor.rs  item.rs  lib.rs  main.rs  manager.rs  order.rs
img/diagrams/puml/: abort_sequences.puml  happy_sequence copy.puml
img/diagrams/uml/: happy_sequence copy.puml
orders/: Cargo.toml
orders/src/: container_type.rs  generate_orders.rs  ice_cream_flavor.rs  item.rs  lib.rs  order.rs
payment_gateway/: Cargo.toml  log.txt
payment_gateway/src/: gateway.rs  lib.rs  logger.rs  main.rs  message.rs  order.rs  order_state.rs
payment_gateway/src/message/: abort.rs  commit.rs  prepare.rs
payment_gateway/src/messages/: abort.rs  commit.rs  message.rs  prepare.rs
payment_gateway/src/order/: ice_cream_flavor.rs  item.rs  order.rs
payment_gateway/src/orders/: container_type.rs  ice_cream_flavor.rs  item.rs  order.rs
robots_simulation/: Cargo.toml
robots_simulation/src/: container.rs  container_state.rs  conteiner_state.rs  coordinator.rs  coordinator_messages.rs  election_message.rs  election_state.rs  ice_cream_container.rs  ice_cream_orders_generator.rs  items.rs  lib.rs  main.rs  message.rs  old_robot.rs  order_items.rs  order_status.rs  order_status_screen.rs  ping_message.rs  robot.rs  robot_messages.rs  robot_state.rs  robot_state_for_coordinator.rs  screen_message.rs  start_robot.rs  udp_message_stream.rs
