[package]
name = "clients_interfaces"
version = "0.1.0"
edition = "2021"





[[bin]]
name = "screen"
path = "src/screen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-rt = "2.0"
rayon = "1.5.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rand = "0.8.5"
orders = {path= "../orders" }


