[package]
name = "gateway_payment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }

[[bin]]
name = "manager"
path = "src/manager.rs"

