[package]
name = "robots_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["full"] }
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
actix = "0.13.0"
actix-rt = "2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
rand = "0.8.5"
futures = "0.3.30"
chrono = "0.4"
orders = {path= "../orders" }

#[[bin]]
#name = "coordinador"
#path = "src/coordinator.rs"

[[bin]]
name = "robot"
path = "src/start_robot.rs"